# async_jobs_rust

./: Cargo.toml  README.md  test_api.sh
src/: main.rs
src/dto/: mod.rs  requests.rs  responses.rs
src/handlers/: job_handler.rs  mod.rs
src/models/: jobs.rs
src/routes/: mod.rs
src/workers/: job_worker.rs  mod.rs
