[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
